# Testrandom

./: CMakeLists.txt  installer.iss  main.cpp
.github/workflows/: windows.yml
